기본 홈페이지 레이아웃 및 스타일 추가

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </header>
     <main>
         <div id="content">
-            <!-- Content will go here -->
+            <p>This is a basic homepage layout for the app.</p>
+            <p>Feel free to navigate and explore more features.</p>
         </div>
     </main>
     <script src="app.js"></script>
